<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background"
    tools:context=".ui.fragments.login.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/sign_up_user_img"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_select_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/custom_edit_text_background"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_user_img">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/ic_user" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/sign_up_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@color/transparent"
                android:hint="@string/sign_up_name"
                android:inputType="textPersonName"
                android:paddingStart="45dp"
                android:paddingEnd="35dp"
                android:textColor="@color/white"
                android:textColorHint="@color/lightGrey" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/phone_number_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/custom_edit_text_background"
            app:layout_constraintTop_toBottomOf="@+id/name_layout">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/ic_user" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/sign_up_phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@color/transparent"
                android:hint="@string/sign_up_phone_number"
                android:inputType="textPersonName"
                android:paddingStart="45dp"
                android:paddingEnd="35dp"
                android:textColor="@color/white"
                android:textColorHint="@color/lightGrey" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/custom_edit_text_background"
            app:layout_constraintTop_toBottomOf="@+id/phone_number_layout">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/ic_email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@color/transparent"
                android:hint="@string/sign_up_email"
                android:inputType="textEmailAddress"
                android:paddingStart="45dp"
                android:paddingEnd="35dp"
                android:textColor="@color/white"
                android:textColorHint="@color/lightGrey" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/login_email_validation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_check_email" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/custom_edit_text_background"
            app:layout_constraintTop_toBottomOf="@+id/email_layout">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/ic_password" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@color/transparent"
                android:hint="@string/sign_up_password"
                android:inputType="textPassword"
                android:paddingStart="45dp"
                android:paddingEnd="35dp"
                android:textColor="@color/white"
                android:textColorHint="@color/lightGrey" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/login_password_go_to_visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/password_visible_animation" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/login_password_go_to_invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone"
                app:srcCompat="@drawable/password_invisible_animation" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/confirm_password_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/custom_edit_text_background"
            app:layout_constraintTop_toBottomOf="@+id/password_layout">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/ic_password" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/sign_up_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@color/transparent"
                android:hint="@string/sign_up_password_confirmed"
                android:inputType="textPassword"
                android:paddingStart="45dp"
                android:paddingEnd="35dp"
                android:textColor="@color/white"
                android:textColorHint="@color/lightGrey" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/confirm_password_go_to_visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/password_visible_animation" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/confirm_password_go_to_invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone"
                app:srcCompat="@drawable/password_invisible_animation" />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:text="@string/sign_up_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>